feat: add dividers to Slack deployment messages for improved readability

--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -29,7 +29,6 @@ jobs:
             {
               "blocks": [
                 {"type": "header", "text": { "type": "plain_text", "text": "DN FE Deployment", "emoji": true}},
-                {"type": "divider"},
                 {
                   "type": "section",
                   "fields": [
@@ -47,6 +46,7 @@ jobs:
                     "text": "*Branch:*\n<https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>"
                   }
                 },
+                {"type": "divider"},
               ],
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "unfurl_links": false,
@@ -98,7 +98,6 @@ jobs:
             {
               "blocks": [
                 {"type": "header", "text": { "type": "plain_text", "text": "DN FE Deployment", "emoji": true}},
-                {"type": "divider"},
                 {"type": "section", "fields": [
                     {"type": "mrkdwn","text": "*Status:*\n📝Updating manifests"},
                     {
@@ -114,7 +113,8 @@ jobs:
                     "text": "*Branch:*\n<https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>"
                   }
                 },
-                {"type": "section", "text": {"type": "mrkdwn", "text": "*Image Tag:*\n`${{ steps.set_image_tag.outputs.image_tag }}`"}}
+                {"type": "section", "text": {"type": "mrkdwn", "text": "*Image Tag:*\n`${{ steps.set_image_tag.outputs.image_tag }}`"}},
+                {"type": "divider"},
               ],
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "ts": "${{ needs.notify-start.outputs.slack_ts }}",
@@ -131,7 +131,6 @@ jobs:
 
       - name: Install yq utility
         run: |
-          exit 1
           wget -qO /tmp/yq https://github.com/mikefarah/yq/releases/download/v4.34.2/yq_linux_amd64
           chmod +x /tmp/yq
           sudo mv /tmp/yq /usr/local/bin/yq
@@ -211,7 +210,6 @@ jobs:
             {
               "blocks": [
                 {"type": "header", "text": { "type": "plain_text", "text": "DN FE Deployment", "emoji": true}},
-                {"type": "divider"},
                 {
                   "type": "section",
                   "fields": [
@@ -232,7 +230,8 @@ jobs:
                     "text": "*Branch:*\n<https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>"
                   }
                 },
-                {"type": "section", "text": {"type": "mrkdwn", "text": "*Image Tag:*\n`${{ needs.update-helm-manifests.outputs.image_tag }}`"}}
+                {"type": "section", "text": {"type": "mrkdwn", "text": "*Image Tag:*\n`${{ needs.update-helm-manifests.outputs.image_tag }}`"}},
+                {"type": "divider"},
               ],
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "ts": "${{ needs.notify-start.outputs.slack_ts }}",
@@ -250,7 +249,6 @@ jobs:
             {
               "blocks": [
                 {"type": "header", "text": { "type": "plain_text", "text": "DN FE Deployment", "emoji": true}},
-                {"type": "divider"},
                 {
                   "type": "section",
                   "fields": [
@@ -271,7 +269,8 @@ jobs:
                     "text": "*Branch:*\n<https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>"
                   }
                 },
-                {"type": "section", "text": {"type": "mrkdwn", "text": "*Image Tag:*\n`${{ needs.update-helm-manifests.outputs.image_tag }}`"}}
+                {"type": "section", "text": {"type": "mrkdwn", "text": "*Image Tag:*\n`${{ needs.update-helm-manifests.outputs.image_tag }}`"}},
+                {"type": "divider"},
               ],
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "ts": "${{ needs.notify-start.outputs.slack_ts }}",
@@ -294,7 +293,6 @@ jobs:
             {
               "blocks": [
                 {"type": "header", "text": { "type": "plain_text", "text": "DN FE Deployment", "emoji": true}},
-                {"type": "divider"},
                 {
                   "type": "section",
                   "fields": [
@@ -315,6 +313,7 @@ jobs:
                     "text": "*Branch:*\n<https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>"
                   }
                 },
+                {"type": "divider"},
               ],
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "ts": "${{ needs.notify-start.outputs.slack_ts }}",
