--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -28,7 +28,7 @@ jobs:
           payload: |
             {
               "text": "*🔄 DN FE Deployment to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}*\n
-              *Status:* Building image 🏗️ *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
+              *Status:* Building image *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
               *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>\n",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "unfurl_links": false,
@@ -79,7 +79,7 @@ jobs:
           payload: |
             {
               "text": "*🔄 DN FE Deployment to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}*\n
-              *Status:* Updating manifests 📝 *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
+              *Status:* Updating manifests *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
               *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>\n
               *Image Tag:* `${{ steps.set_image_tag.outputs.image_tag }}",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
@@ -177,7 +177,7 @@ jobs:
               "text": "*🏁 DN FE Deployment to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}*\n
               *Status:* Done 🎉 *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
               *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>\n
-              *Image Tag:* `${{ steps.set_image_tag.outputs.image_tag }}",
+              *Image Tag:* `${{ needs.update-helm-manifests.outputs.image_tag }}`",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "ts": "${{ needs.notify-start.outputs.slack_ts }}",
               "unfurl_links": false,
@@ -193,7 +193,7 @@ jobs:
           payload: |
             {
               "text": "*❌ DN FE Deployment to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}*\n
-              *Status:* Failed 💥 *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
+              *Status:* Failed *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
               *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>
               ${{ needs.update-helm-manifests.outputs.image_tag != '' && format('\n*Image Tag:* `%s`"\}\},', needs.update-helm-manifests.outputs.image_tag) || '' }}",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
