--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -216,7 +216,7 @@ jobs:
           payload: |
             {
               "text": "*❌ DN FE Deployment to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}*\n
-              *Status:* Cancelled 🚫 *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
+              *Status:* Cancelled *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
               *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>
               ${{ needs.update-helm-manifests.outputs.image_tag != '' && format('\n*Image Tag:* `%s`"\}\},', needs.update-helm-manifests.outputs.image_tag) || '' }}",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
