--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -194,8 +194,7 @@ jobs:
             {
               "text": "*❌ DN FE Deployment to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}*\n
               *Status:* Failed *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
-              *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>
-              ${{ needs.update-helm-manifests.outputs.image_tag != '' && format('\n*Image Tag:* `%s`', needs.update-helm-manifests.outputs.image_tag) || '' }}",
+              *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "ts": "${{ needs.notify-start.outputs.slack_ts }}",
               "unfurl_links": false,
@@ -217,8 +216,7 @@ jobs:
             {
               "text": "*❌ DN FE Deployment to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}*\n
               *Status:* Cancelled *Created by:* <https://github.com/${{ github.actor }}|${{ github.actor }}>\n
-              *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>
-              ${{ needs.update-helm-manifests.outputs.image_tag != '' && format('\n*Image Tag:* `%s`', needs.update-helm-manifests.outputs.image_tag) || '' }}",
+              *Branch:* <https://github.com/${{ github.repository }}/tree/${{ github.ref_name }}|${{ github.ref_name }}>",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
               "ts": "${{ needs.notify-start.outputs.slack_ts }}",
               "unfurl_links": false,
