--- a/.cursorignore
+++ b/.cursorignore
@@ -1,6 +1,7 @@
 __mocks__
 .github/workflows/run_e2e_tests.yml
 .helpers
+.vscode/**
 appconfig.js
 configs/
 cosmos-export/
@@ -17,3 +18,4 @@ i18next-scanner.config.cjs
 *.csv
 playwright**
 postcss.config.ts
+*.svg
