--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "noErrorTruncation": true,
+    // "noErrorTruncation": true,
     "noImplicitAny": false,
     "useDefineForClassFields": true,
     "target": "esnext",
