--- a/package.json
+++ b/package.json
@@ -217,7 +217,7 @@
     "overrides": {
       "@loaders.gl/worker-utils": "^3.4.15",
       "@loaders.gl/core": "^3.4.14",
-      "@reatom/utils": "^3.11.0"
+      "@reatom/core": "3.10.1"
     }
   }
 }
