feat(metrics): 22156 make Matomo URL configurable

--- a/configs/config.default.json
+++ b/configs/config.default.json
@@ -60,5 +60,6 @@
   "KEYCLOAK_URL": "https://keycloak01.kontur.io",
   "KEYCLOAK_REALM": "kontur",
   "KEYCLOAK_CLIENT_ID": "kontur_platform",
-  "SENTRY_DSN": "https://fixme@dsn.ingest.sentry.io/project-id"
+  "SENTRY_DSN": "https://fixme@dsn.ingest.sentry.io/project-id",
+  "MATOMO_CONTAINER_URL": "https://matomo.kontur.io/js/container_R9VsLLth.js"
 }
