--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "license": "MIT",
   "engines": {
-    "node": ">=20"
+    "node": ">=20",
+    "pnpm": "^9.0.0"
   },
   "scripts": {
     "dev": "pnpm run i18n:import && vite",
