--- a/configs/config.default.json
+++ b/configs/config.default.json
@@ -1,33 +1,33 @@
 {
-  "API_GATEWAY": "https://disaster.ninja/active/api",
-  "REPORTS_API": "https://disaster.ninja/active/reports",
-  "BIVARIATE_TILES_RELATIVE_URL": "api/tiles/bivariate/v1/",
-  "BIVARIATE_TILES_INDICATORS_CLASS": "all",
-  "REFRESH_INTERVAL_SEC": 300,
-  "MAP_BASE_STYLE": "https://disaster.ninja/tiles/basemap/style_ninja.json",
-  "MAP_BLANK_SPACE_ID": "map-view",
-  "AUTOFOCUS_ZOOM": 13,
-  "FEATURES_BY_DEFAULT": [
-    "events_list",
-    "current_event",
-    "reports",
-    "osm_edit_link",
-    "side_bar",
-    "analytics_panel",
-    "map_layers_panel",
-    "focused_geometry_layer",
-    "map_ruler",
-    "boundary_selector",
-    "geometry_uploader",
-    "legend_panel",
-    "layers_in_area",
-    "toasts",
-    "feed_selector",
-    "tooltip"
-  ],
-  "DEFAULT_FEED": "kontur-public",
-  "DEFAULT_LANGUAGE": "en",
-  "OSM_EDITORS": [
+  "apiGateway": "https://disaster.ninja/active/api",
+  "reportsApiGateway": "https://disaster.ninja/active/reports",
+  "bivariateTilesRelativeUrl": "api/tiles/bivariate/v1/",
+  "bivariateTilesIndicatorsClass": "all",
+  "refreshIntervalSec": 300,
+  "mapBaseStyle": "https://disaster.ninja/tiles/basemap/style_ninja.json",
+  "mapBlankSpaceId": "map-view",
+  "autofocusZoom": 13,
+  "featuresByDefault": {
+    "events_list": true,
+    "current_event": true,
+    "reports": true,
+    "osm_edit_link": true,
+    "side_bar": true,
+    "analytics_panel": true,
+    "map_layers_panel": true,
+    "focused_geometry_layer": true,
+    "map_ruler": true,
+    "boundary_selector": true,
+    "geometry_uploader": true,
+    "legend_panel": true,
+    "layers_in_area": true,
+    "toasts": true,
+    "feed_selector": true,
+    "tooltip": true
+  },
+  "defaultFeed": "kontur-public",
+  "defaultLanguage": "en",
+  "osmEditors": [
     {
       "id": "osm",
       "title": "OpenStreetMap.org default editor",
@@ -49,9 +49,9 @@
       "url": "https://mapwith.ai/rapid#map="
     }
   ],
-  "KEYCLOAK_URL": "https://keycloak01.kontur.io",
-  "KEYCLOAK_REALM": "kontur",
-  "KEYCLOAK_CLIENT_ID": "kontur_platform",
-  "SENTRY_DSN": "https://fixme@dsn.ingest.sentry.io/project-id",
-  "MATOMO_CONTAINER_URL": "https://matomo.kontur.io/js/container_I7eDYwKj.js"
+  "keycloakUrl": "https://keycloak01.kontur.io",
+  "keycloakRealm": "kontur",
+  "keycloakClientId": "kontur_platform",
+  "sentryDsn": "https://fixme@dsn.ingest.sentry.io/project-id",
+  "matomoContainerUrl": "https://matomo.kontur.io/js/container_I7eDYwKj.js"
 }
