--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,11 @@
-*
-!./dist/*
-!./server/*
+node_modules/
+.git/
+e2e/
+.github/
+playwright.config.ts
+!dist/
+# CI artifacts
+coverage/
+playwright-report/
+*.trace
+docker-compose*.yml
