chore(mcda): 00000 add alias for mcda styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
       "~services/*": ["services/*"],
       "~core/*": ["core/*"],
       "~features/*": ["features/*"],
-      "~widgets/*": ["widgets/*"]
+      "~widgets/*": ["widgets/*"],
+      "~mcda/*": ["core/logical_layers/renderers/stylesConfigs/mcda/*"]
     }
   },
   "include": [
