Revert "feat(ci): 21190 cache docker layers (#1161)"
This reverts commit 746077fecae72ef96341b0c2940f9fbea2dbe2fb.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,3 @@
-node_modules/
-.git/
-e2e/
-.github/
-playwright.config.ts
-!dist/
-# CI artifacts
-coverage/
-playwright-report/
-*.trace
-docker-compose*.yml
+*
+!./dist/*
+!./server/*
