--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "@turf/helpers": "^6.5.0",
     "@turf/kinks": "^6.5.0",
     "@turf/union": "^6.5.0",
+    "lru-cache": "^11.1.0",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
     "@types/d3-color": "^3.1.3",
     "@types/d3-interpolate": "^3.0.4",
     "@types/d3-scale": "^4.0.8",
